@@ -84,7 +84,6 @@ my $builder = $class->new(
           'npg_tracking::data::bait'                           => 0,
           'npg_tracking::data::transcriptome'                  => 0,
           'npg_tracking::data::gbs_plex'                       => 0,
-          'npg_tracking::daemon'                               => 0,
           'npg_tracking::glossary::run'                        => 0,
           'npg_tracking::glossary::rpt'                        => 0,
           'npg_tracking::glossary::composition::factory::rpt_list' => 0,
