@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - Remove pipeline extensions for the npg_tracking daemon monitor,
+   they are no longer in use.
+
 release 60.3.0
  - Extended i5opposite pad to 5 bases.
  - Check for pp archive existence prior to job creation.
